Added emoList, need to clean up code before pull request

--- a/client/hbs/application.hbs
+++ b/client/hbs/application.hbs
@@ -3,6 +3,7 @@
 		<li>{{#linkTo "index" id="home"}}Home{{/linkTo}}</li>
 		<li>{{#linkTo "hipster.add" id="add"}}Add Hipster{{/linkTo}}</li>
 		<li>{{#linkTo "hipster.find"}}Find Hipster{{/linkTo}}</li>
+        <li>{{#linkTo "emoList.add"}}Add Emo Hangout{{/linkTo}}</li>
 	</ul>
 </nav>
 <div id="main">
